# Different_gripper

Three_finger_soft/gripper_description/: CMakeLists.txt  package.xml
Three_finger_soft/gripper_description/meshes/: 42_motor_nut.part  42_step_motor.part  d435_mount.part  d435_mount.stl  fa3_driveboard.part  fa3_link.part  fa3_link_1.part  fa3_link_2.part  fa3_link_2.stl  fa3_main_body.part  famr20100_soft.part  famr20100_soft.stl  famr20100_soft_1.part  famr20100_soft_2.part
Three_finger_soft/gripper_description/urdf/: gripper.xacro  robot.urdf  three_finger_soft_gripper.xacro  tm5_with_three_finger_gripper.xacro
Three_finger_soft/three_finger_soft_moveit_config/: CMakeLists.txt  package.xml
Three_finger_soft/three_finger_soft_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit.yaml  ompl_planning.yaml  tm5_with_gripper.srdf
Three_finger_soft/three_finger_soft_moveit_config/launch/: demo.launch.py
gripper_description/: CMakeLists.txt
gripper_description/meshes/: 42_motor_copper_nut.stl  42_step_motor.part  fa3_drive_board.part  fa3_driveboard.part  fa3_link.part  fa3_link_1.part  fa3_link_2.part  fa3_main_body.part  fa3_main_body.stl  famr20100_soft_2.part  famr20100_swing_fixed.part  famr20100_swing_fixed_1.part  famr20100_swing_fixed_2.part  famr20100_swing_fixed_2.stl
gripper_description/urdf/: robot.urdf
three_finger_gripper_urdf_1/: config.json  robot.urdf
three_finger_gripper_urdf_1/assets/: 42_motor_copper_nut.part  42_motor_nut.part  42_step_motor.stl  42_stepper_motor.part  fa3_driveboard.stl  fa3_fixed_body.part  fa3_link.stl  fa3_link_1.stl  famr20100_soft.part  famr20100_soft_1.part  (+1 more)
